--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,10 @@
         android:id="@+id/title_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="@dimen/margin_top_40"
         android:text="@string/title"
         android:textAlignment="center"
-        android:textSize="17dp"
+        android:textSize="@dimen/text_size_17"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -24,7 +24,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="@dimen/height_300"
         app:layout_constraintTop_toBottomOf="@+id/title_id"
         app:layout_constraintVertical_bias="0.2">
 
@@ -37,19 +37,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="28dp"
-        android:backgroundTint="#F44336"
-        android:layout_marginRight="20dp"
+        android:backgroundTint="@color/red"
+        android:layout_marginRight="@dimen/margin_right_20"
         android:src="@drawable/take_image"
         app:layout_constraintBottom_toTopOf="@+id/upload_image_id"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="@dimen/margin_right_20"
         android:id="@+id/upload_image_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:backgroundTint="#4CAF50"
+        android:layout_marginBottom="@dimen/margin_bottom_20"
+        android:backgroundTint="@color/green"
         android:src="@drawable/upload_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
