--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -12,7 +12,7 @@
     <ImageView
         android:scaleType="centerCrop"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="@dimen/height_180"
         android:id="@+id/itemImage"/>
 
     </androidx.cardview.widget.CardView>
