--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:scaleType="center"
+        android:scaleType="centerCrop"
         android:id="@+id/ImageFragmentImageView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
